--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+pywebview; sys_platform == 'win32'
+pywebview[qt]; sys_platform == 'darwin'
+pywebview[qt]; sys_platform == 'linux'
+pywebview[qt]; sys_platform == 'linux2'
 requests
-pywebview[qt]
 Flask
+pydantic
